feature: TrustMark
[IS-3]
  * Added errorhandling
  * Using stylecheck for Java 21
  * Testing of TrustMarks
  * Added federation exceptions