@@ -21,9 +21,8 @@ import com.nimbusds.jwt.JWTClaimsSet;
 import com.nimbusds.jwt.SignedJWT;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import se.digg.oidfed.trustmarkissuer.configuration.ConfigurationResolverInMemory;
 import se.digg.oidfed.trustmarkissuer.configuration.TrustMarkIssuerProperties;
-import se.digg.oidfed.trustmarkissuer.dvo.EntityId;
+import se.digg.oidfed.trustmarkissuer.configuration.TrustMarkProperties;
 import se.digg.oidfed.trustmarkissuer.dvo.TrustMarkId;
 import se.digg.oidfed.trustmarkissuer.exception.InvalidRequestException;
 import se.digg.oidfed.trustmarkissuer.exception.NotFoundException;
@@ -39,17 +38,17 @@ import java.util.List;
 import static org.junit.jupiter.api.Assertions.*;
 
 /**
- * Testing all operations towards trustmark operations
+ * Testing all operations towards TrustMark operations
  *
  * @author Per Fredrik Plars
  */
 class TrustMarkIssuerTest {
 
-  private ConfigurationResolverInMemory configurationResolver;
+  private TrustMarkProperties trustMarkProperties;
 
   @BeforeEach
   public void init() throws Exception {
-    configurationResolver = TestDataSetup.createConfigurationResolver();
+    this.trustMarkProperties = TestDataSetup.trustMarkProperties();
   }
 
   @Test
@@ -57,31 +56,32 @@ class TrustMarkIssuerTest {
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties sub1 =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://sub1.se").toString())
+            .sub("http://sub1.se")
             .expires(Instant.now().plus(10, ChronoUnit.DAYS))
             .granted(Instant.now())
             .build();
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties sub2 =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://sub2.se").toString())
+            .sub("http://sub2.se")
             .expires(Instant.now().plus(10, ChronoUnit.DAYS))
             .granted(Instant.now())
             .build();
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties sub3 =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://sub.outdated.se").toString())
+            .sub("http://sub.outdated.se")
             .expires(Instant.now().plus(1, ChronoUnit.DAYS))
             .granted(Instant.now())
             .build();
 
-    configurationResolver.addTrustMarkIssuerProperties(TrustMarkIssuerProperties.builder()
-        .trustmarkid(TrustMarkId.create("http://tm1.digg.se"))
-        .subjects(List.of(sub1, sub2, sub3))
-        .build());
+    this.trustMarkProperties.getTrustMarks()
+        .add(TrustMarkIssuerProperties.builder()
+            .trustMarkId(TrustMarkId.create("http://tm1.digg.se"))
+            .subjects(List.of(sub1, sub2, sub3))
+            .build());
 
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver) {
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties) {
       @Override
       protected Instant now() {
         return Instant.now().plus(2, ChronoUnit.DAYS);
@@ -89,25 +89,25 @@ class TrustMarkIssuerTest {
     };
     assertThrows(InvalidRequestException.class, () -> trustMarkIssuer.trustMarkListing(null));
     assertThrows(InvalidRequestException.class,
-        () -> trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest(null, null, null)));
+        () -> trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest(null, null)));
     assertThrows(NotFoundException.class,
-        () -> trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest(null, "http://www.i.trust.u.se", null)));
+        () -> trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest("http://www.i.trust.u.se", null)));
 
     final List<String> search1 =
-        trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest(null, "http://tm1.digg.se", null));
+        trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest("http://tm1.digg.se", null));
     assertEquals(2, search1.size());
 
     final List<String> search2 = trustMarkIssuer.trustMarkListing(
-        new TrustMarkListingRequest(null, "http://tm1.digg.se", "http://sub.notfound"));
+        new TrustMarkListingRequest("http://tm1.digg.se", "http://sub.notfound"));
     assertEquals(0, search2.size());
 
     final List<String> search3 =
-        trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest(null, "http://tm1.digg.se", "http://sub1.se"));
+        trustMarkIssuer.trustMarkListing(new TrustMarkListingRequest("http://tm1.digg.se", "http://sub1.se"));
     assertEquals(1, search3.size());
-    assertEquals("http://sub1.se", search3.get(0));
+    assertEquals("http://sub1.se", search3.getFirst());
 
     final List<String> search4 = trustMarkIssuer.trustMarkListing(
-        new TrustMarkListingRequest(null, "http://tm1.digg.se", "http://sub.outdated.se"));
+        new TrustMarkListingRequest("http://tm1.digg.se", "http://sub.outdated.se"));
     assertEquals(0, search4.size());
 
   }
@@ -118,17 +118,19 @@ class TrustMarkIssuerTest {
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties sub1 =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://sub1.se").toString())
+            .sub("http://sub1.se")
             .expires(Instant.now().plus(10, ChronoUnit.DAYS))
             .granted(Instant.now())
             .build();
 
-    configurationResolver.addTrustMarkIssuerProperties(TrustMarkIssuerProperties.builder()
-        .trustmarkid(TrustMarkId.create("http://tm1.digg.se"))
+    this.trustMarkProperties.getTrustMarks().add(TrustMarkIssuerProperties.builder()
+        .trustMarkId(TrustMarkId.create("http://tm1.digg.se"))
+            .refUri("http://digg.se/tm1/doc")
+            .logoUri("http://digg.se/tm1/logo.png")
         .subjects(List.of(sub1))
         .build());
 
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver);
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties);
     final String trustMarkJWT = trustMarkIssuer.trustMark(new TrustMarkRequest("http://tm1.digg.se", "http://sub1.se"));
 
     final SignedJWT tm = SignedJWT.parse(trustMarkJWT);
@@ -153,45 +155,46 @@ class TrustMarkIssuerTest {
     System.out.println(unpackedClaims);
   }
 
-
   @Test
   public void testTrustMarkValidity()
       throws NotFoundException, InvalidRequestException {
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties sub1 =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://sub1.se").toString())
+            .sub("http://sub1.se")
             .expires(Instant.now().plus(10, ChronoUnit.MINUTES))
             .granted(Instant.now())
             .build();
 
     final TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties expired =
         TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties.builder()
-            .sub(EntityId.create("http://expired.se").toString())
+            .sub("http://expired.se")
             .expires(Instant.now().plus(6, ChronoUnit.MINUTES))
             .granted(Instant.now())
             .build();
 
-    configurationResolver.addTrustMarkIssuerProperties(TrustMarkIssuerProperties.builder()
-        .trustmarkid(TrustMarkId.create("http://tm1.digg.se"))
-        .subjects(List.of(sub1,expired))
+    this.trustMarkProperties.getTrustMarks().add(TrustMarkIssuerProperties.builder()
+        .trustMarkId(TrustMarkId.create("http://tm1.digg.se"))
+        .subjects(List.of(sub1, expired))
         .build());
 
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver) {
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties) {
       @Override
       protected Instant now() {
-        return Instant.now().plus(8,ChronoUnit.MINUTES);
+        return Instant.now().plus(8, ChronoUnit.MINUTES);
       }
     };
 
-    assertTrue(trustMarkIssuer.trustMarkStatus(new TrustMarkStatusRequest("http://tm1.digg.se","http://sub1.se",null)));
-    assertFalse(trustMarkIssuer.trustMarkStatus(new TrustMarkStatusRequest("http://tm1.digg.se","http://expired.se",null)));
+    assertTrue(
+        trustMarkIssuer.trustMarkStatus(new TrustMarkStatusRequest("http://tm1.digg.se", "http://sub1.se", null)));
+    assertFalse(
+        trustMarkIssuer.trustMarkStatus(new TrustMarkStatusRequest("http://tm1.digg.se", "http://expired.se", null)));
   }
 
   @Test
-  void testExpCalculationExpectTTLForSubject() throws NotFoundException, InvalidRequestException {
+  void testExpCalculationExpectTTLForSubject() throws InvalidRequestException {
 
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver);
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties);
     final Instant ttlForSubject = Instant.now().plus(2, ChronoUnit.MINUTES);
     final Date exp = trustMarkIssuer.calculateExp(Duration.ofMinutes(5), ttlForSubject);
 
@@ -200,10 +203,10 @@ class TrustMarkIssuerTest {
   }
 
   @Test
-  void testExpCalculationExpectDuration() throws NotFoundException, InvalidRequestException {
+  void testExpCalculationExpectDuration() {
 
     final Instant now = Instant.now();
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver) {
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties) {
       @Override
       protected Instant now() {
         return now;
@@ -217,11 +220,10 @@ class TrustMarkIssuerTest {
         "Expected duration to be selected");
   }
 
-
   @Test
   void testValidityInTime() throws NotFoundException, InvalidRequestException {
     final Instant now = Instant.now();
-    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(configurationResolver) {
+    final TrustMarkIssuer trustMarkIssuer = new TrustMarkIssuer(this.trustMarkProperties) {
       @Override
       protected Instant now() {
         return now;
@@ -230,19 +232,19 @@ class TrustMarkIssuerTest {
 
     assertTrue(trustMarkIssuer.isTrustMarkValidInTime(TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties
         .builder()
-        .granted(Instant.now().minus(10,ChronoUnit.MINUTES))
-        .expires(Instant.now().plus(30,ChronoUnit.MINUTES))
+        .granted(Instant.now().minus(10, ChronoUnit.MINUTES))
+        .expires(Instant.now().plus(30, ChronoUnit.MINUTES))
         .build()));
 
     assertFalse(trustMarkIssuer.isTrustMarkValidInTime(TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties
         .builder()
-            .revoked(true)
+        .revoked(true)
         .build()));
 
     assertFalse(trustMarkIssuer.isTrustMarkValidInTime(TrustMarkIssuerProperties.TrustMarkIssuerSubjectProperties
         .builder()
-        .granted(Instant.now().plus(10,ChronoUnit.MINUTES))
-        .expires(Instant.now().plus(30,ChronoUnit.MINUTES))
+        .granted(Instant.now().plus(10, ChronoUnit.MINUTES))
+        .expires(Instant.now().plus(30, ChronoUnit.MINUTES))
         .build()));
 
   }
